<resources>
    <string name="app_name">TradeHub</string>
    <string name="登录">登录</string>
    <string name="注册">注册</string>
    <string name="请输入十四位学号">请输入十四位学号</string>
    <string name="请输入密码">请输入密码</string>
    <string name="图片">图片</string>
    <string name="用户图标">用户图标</string>
    <string name="密码图标">密码图标</string>
    <string name="用户名">用户名</string>
    <string name="请输入用户名">请输入用户名</string>
    <string name="学院">学院</string>
    <string name="请输入学院全称">请输入学院全称</string>
    <string name="学号">学号</string>
    <string name="密码">密码</string>
    <string name="确认密码">确认密码</string>
    <string name="请再次确认密码">请再次确认密码</string>
    <string name="确认注册">确认注册</string>
    <string name="个人中心">个人中心</string>
    <string name="用户头像">用户头像</string>
    <string name="横线">横线</string>
    <string name="竖线">竖线</string>
    <string name="返回箭头">返回箭头</string>
    <string name="我发布的">我发布的</string>
    <string name="浏览记录">浏览记录</string>
    <string name="我卖出的">我卖出的</string>
    <string name="我买到的">我买到的</string>
    <string name="go">go</string>
    <string name="TradeHub">TradeHub</string>
    <string name="排队出品">排队出品</string>
    <string name="商品名称">商品名称</string>
    <string name="商品简介">商品简介</string>
    <string name="预期价格">预期价格</string>
    <string name="编辑商品名称">编辑商品名称</string>
    <string name="编辑商品简介">编辑商品简介</string>
    <string name="编辑商品价格">编辑商品价格</string>
    <string name="我发布的图标">我发布的图标</string>
    <string name="浏览记录图标">浏览记录图标</string>
    <string name="我卖出的图标">我卖出的图标</string>
    <string name="我买到的图标">我买到的图标</string>
    <string name="发布">发布</string>
    <string name="取消">取消</string>
    <string name="咨询">咨询</string>
    <string name="退出">退出</string>
    <string name="消息">消息</string>
    <string name="查看全部">查看全部</string>
    <string name="推荐产品">推荐产品</string>
    <string name="生活用品">生活用品</string>
    <string name="IP周边">IP周边</string>
    <string name="食品生鲜">食品生鲜</string>
    <string name="学习用品">学习用品</string>
    <string name="电子设备">电子设备</string>
    <string name="商品分类">商品分类</string>
    <string name="搜索">搜索</string>
    <string name="欢迎来到">欢迎来到</string>
    <string name="发现图标">发现图标</string>
    <string name="发现">发现</string>
    <string name="电子设备图标">电子设备图标</string>
    <string name="生活用品图标">生活用品图标</string>
    <string name="IP周边图标">IP周边图标</string>
    <string name="学习用品图标">学习用品图标</string>
    <string name="消息图标">消息图标</string>
    <string name="个人中心图标">个人中心图标</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>