<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/backkk">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="725dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button2"
                android:text="@string/退出" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="70dp"
                android:background="@android:color/black"
                android:contentDescription="@string/竖线" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:hint="@string/我发布的"
                android:textColor="@color/black"
                android:textSize="30sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:contentDescription="@string/横线" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>