<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="385dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="24dp"

                    tools:layout_editor_absoluteX="1dp">

                    <Button
                        android:id="@+id/add"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:background="@drawable/baseline_add_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="0dp">

                    </Button>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/欢迎来到"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TradeHub"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@id/textView"
                        app:layout_constraintVertical_bias="0.8"
                        tools:ignore="MissingConstraints" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/ww"
                    android:drawableStart="@drawable/sear"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/搜索"
                    android:inputType="text"
                    android:padding="8dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/商品分类"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:layout_weight="0.2"
                        android:orientation="vertical"
                        tools:layout_weight="0.2">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:background="@drawable/btn_cat_background"
                            tools:layout_editor_absoluteY="1dp">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="10dp"
                                android:contentDescription="@string/电子设备图标"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/phone" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:layout_weight="0.2"
                        android:orientation="vertical"
                        tools:layout_weight="0.2">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:background="@drawable/btn_cat_background"
                            tools:layout_editor_absoluteY="1dp">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="10dp"

                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/book" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:layout_weight="0.2"
                        android:orientation="vertical"
                        tools:layout_weight="0.2">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:background="@drawable/btn_cat_background"
                            tools:layout_editor_absoluteY="1dp">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="7dp"
                                android:layout_marginTop="7dp"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/foods" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:layout_weight="0.2"
                        android:orientation="vertical"
                        tools:layout_weight="0.2">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:background="@drawable/btn_cat_background"
                            tools:layout_editor_absoluteY="1dp">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="10dp"
                                android:foregroundGravity="center"

                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/ip" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:layout_weight="0.2"
                        android:orientation="vertical"
                        tools:layout_weight="0.2">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:background="@drawable/btn_cat_background"
                            tools:layout_editor_absoluteY="1dp">


                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="7dp"
                                android:layout_marginTop="7dp"

                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/living" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:layout_weight="0.2"
                        android:text="@string/电子设备"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        tools:layout_weight="0.2" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:layout_weight="0.2"
                        android:text="@string/学习用品"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        tools:layout_weight="0.2" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:layout_weight="0.2"
                        android:text="@string/食品生鲜"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        tools:layout_weight="0.2" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:layout_weight="0.2"
                        android:text="@string/IP周边"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        tools:layout_weight="0.2" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:layout_weight="0.2"
                        android:text="@string/生活用品"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        tools:layout_weight="0.2" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/推荐产品"
                        android:textColor="@color/black"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/查看全部"
                        android:textColor="#ccccff" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />

            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.appcompat.widget.LinearLayoutCompat>